# CMakeTemplate

./: CMakeLists.txt  README.md
include/: cat.h  dog.h
src/: cat.cpp  main.cpp
